# icoo_proxy

./: .env.example  .gitignore  CHANGELOG.md  README.cn.md  README.md  app.go  app_pagination_test.go  app_test.go  build-all.ps1  build.ps1  go.mod  go.sum  go.work  go.work.sum  icoo_proxy.toml.example  main.go  tray_windows.go  wails.json
.claude/: settings.local.json
bridge/: build.ps1  go.mod  go.sum
common/: README.md  go.mod
desktop/: .gitignore  app.go  app_test.go  build.ps1  config.go  go.mod  go.sum  main.go  process_lifecycle_other.go  process_lifecycle_windows.go  server_process_other.go  server_process_windows.go  tray_stub.go  tray_windows.go  wails.json
docs/: 2026-04-16-ued-page-replacement.md  README.md  TODO计划文档.md  code-review-report.md  development-plan.md  openapi.yaml  optimization-development-plan.md  plan-model-mapping.md  plan-model-settings.md  plugin-ipc-contract.md  plugin-ipc-sdk.md  (+10 more)
icoo_llm_bridge_r/: .gitignore  Cargo.toml  build.ps1
icoo_llm_bridge_r/docs/parity/: go-rust-parity-checklist.md
icoo_llm_bridge_r/docs/plans/: 2026-05-22-rust-icoo-llm-bridge-refactor.md  2026-05-22-rust-parity-hardening.md  2026-05-22-rust-replacement-readiness.md
icoo_llm_bridge_r/docs/release/: real-upstream-verification.md  rust-gray-release-runbook.md
icoo_llm_bridge_r/scripts/: preflight-gray-replacement.ps1  verify-real-upstream.ps1
icoo_llm_bridge_r/src/: admin.rs  auth.rs  config.rs  db.rs  http_app.rs  lib.rs  main.rs  model.rs  protocol.rs  proxy.rs  repository.rs  routing.rs  tracker.rs
icoo_llm_bridge_r/tests/: proxy_e2e.rs
(+537 files in other folders)
